# axum-observability

./: Cargo.toml
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: lib.rs  metrics.rs  middleware.rs  trace.rs  trace_id_format.rs  tracing.rs
src/middleware/: mod.rs  response_injector.rs  trace_extractor.rs
src/tools/: mod.rs
