[package]
name = "axum-observability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0-rc.2", features = ["json"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# thiserror = "1"
tower-http = { version = "0.3", features = ["trace"] }
http = "0.2"
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
opentelemetry-semantic-conventions = "0.10.0"

reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = { version = "0.1" }
reqwest-tracing = { version = "0.3", features = ["opentelemetry_0_18"] }

metrics = "0.20"
metrics-exporter-prometheus = "0.11.0"

chrono = "0.4"
tracing-serde = "0.1"
