[package]
name = "axum-observability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["json"] }
futures = "0.3"
tokio = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# thiserror = "1"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
http = "0.2"
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
opentelemetry = { version = "0.18", features = ["rt-tokio","metrics"] }
opentelemetry-otlp = { version = "0.11", features = [
  "metrics",
] }
opentelemetry-semantic-conventions = "0.10"

reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = { version = "0.2" }
reqwest-tracing = { version = "0.4", features = ["opentelemetry_0_18"] }

chrono = "0.4"
tracing-serde = "0.1"


[dev-dependencies]
assert2 = "0.3"
assert-json-diff = "2.0"
opentelemetry-otlp = { version = "0.11", features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
rstest = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }